Updates colors for the DatePicker + Fixes highlightting the default date + Fixes styles on mobile

--- a/scss/_date-range-input.scss
+++ b/scss/_date-range-input.scss
@@ -41,7 +41,7 @@
   top: 44px;
   left: 0px;
   z-index: 10;
-  width: 305px;
+  width: 300px;
   border: 1px solid $dropdownBorder;
   padding: 8px;
   background-color: white;
@@ -79,7 +79,7 @@
   &--calendar-open {
     @include respond-to(wide-screens) {
       top: 52px;
-      width: 570px;
+      width: 575px;
     }
   }
 }
@@ -87,8 +87,12 @@
 .dateRangeInput__defined-ranges {
   float: left;
   list-style-type: none;
-  margin: 0;
+  margin: 0 0 10px;
   padding: 0;
+
+  @include respond-to(wide-screens) {
+    margin: 0;
+  }
 
   > li {
     margin: 0 1% 10px ;
@@ -129,6 +133,8 @@
 }
 
 .dateRangeInput__calendarWrapper {
+  float: left;
+
   @include respond-to(wide-screens) {
     float: right;
   }
@@ -136,10 +142,10 @@
 
 .dateRangeInput__dropdown--has-ranges {
   @include respond-to(wide-screens) {
-    width: 715px;
+    width: 695px;
 
     .DateRangeInput__dropdown--calendar-open {
-      width: 715px;
+      width: 695px;
     }
 
     .dateRangeInput__calendarWrapper {
