--- a/scss/react-dates/variables.scss
+++ b/scss/react-dates/variables.scss
@@ -3,12 +3,12 @@ $react-dates-width-arrow: 24px !default;
 $react-dates-width-tooltip-arrow: 20px !default;
 $react-dates-spacing-vertical-picker: 72px !default;
 
-$react-dates-color-primary: #00a699 !default;
+$react-dates-color-primary: #147e9d !default;
 $react-dates-color-primary-dark: #008489 !default;
-$react-dates-color-primary-shade-1: #33dacd !default;
-$react-dates-color-primary-shade-2: #66e2da !default;
-$react-dates-color-primary-shade-3: #80e8e0 !default;
-$react-dates-color-primary-shade-4: #b2f1ec !default;
+$react-dates-color-primary-shade-1: rgba($react-dates-color-primary, 0.7) !default;
+$react-dates-color-primary-shade-2: rgba($react-dates-color-primary, 0.6) !default;
+$react-dates-color-primary-shade-3: rgba($react-dates-color-primary, 0.4) !default;
+$react-dates-color-primary-shade-4: rgba($react-dates-color-primary, 0.3) !default;
 $react-dates-color-secondary: #007a87 !default;
 $react-dates-color-white: #fff !default;
 $react-dates-color-gray: #565a5c !default;
